logs/flutter_daemon.txt
!! PLEASE REVIEW THIS LOG FOR SENSITIVE INFORMATION BEFORE SHARING !!

Dart Code extension: 3.71.20230801
Flutter extension: 3.71.20230801 (not activated)

App: Visual Studio Code
Version: 1.81.0
Platform: win

HTTP_PROXY: undefined
NO_PROXY: undefined

Logging Categories:
    FlutterDaemon

Sun Aug 06 2023 [21:31:45 GMT+0700 (Indochina Time)] Log file started
[9:31:45 PM] [FlutterDaemon] [Info] Spawning C:\src\flutter\bin\flutter.bat with args ["daemon"]
[9:31:45 PM] [FlutterDaemon] [Info] ..  in C:\src\flutter
[9:31:45 PM] [FlutterDaemon] [Info] ..  with {"toolEnv":{"FLUTTER_HOST":"VSCode","PUB_ENVIRONMENT":"vscode.dart-code"}}
[9:31:45 PM] [FlutterDaemon] [Info]     PID: 16872
[9:31:50 PM] [FlutterDaemon] [Info] <== [{"event":"daemon.connected","params":{"version":"0.6.1","pid":21968}}]
[9:31:50 PM] [FlutterDaemon] [Info] ==> [{"id":"1","method":"device.enable"}]
[9:31:50 PM] [FlutterDaemon] [Info] <== [{"event":"daemon.logMessage","params":{"level":"status","message":"Starting device daemon..."}}]
[9:31:50 PM] [FlutterDaemon] [Info] ==> [{"id":"2","method":"emulator.getEmulators"}]
[9:31:50 PM] [FlutterDaemon] [Info] ==> [{"id":"3","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[9:31:50 PM] [FlutterDaemon] [Info] <== [{"id":"1"}]
[9:31:51 PM] [FlutterDaemon] [Info] <== [{"id":"3","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[9:31:51 PM] [FlutterDaemon] [Info] ==> [{"id":"4","method":"emulator.getEmulators"}]
[9:31:51 PM] [FlutterDaemon] [Info] <== [{"id":"2","result":[{"id":"Pixel_3a_API_34_extension_level_7_x86_64","name":"Pixel_3a_API_34_extension_level_7_x86_64","category":"mobile","platformType":"android"},{"id":"Pixel_6_Pro_API_33","name":"Pixel 6 Pro API 33","category":"mobile","platformType":"android"}]}]
[9:31:51 PM] [FlutterDaemon] [Info] <== [{"id":"4","result":[{"id":"Pixel_3a_API_34_extension_level_7_x86_64","name":"Pixel_3a_API_34_extension_level_7_x86_64","category":"mobile","platformType":"android"},{"id":"Pixel_6_Pro_API_33","name":"Pixel 6 Pro API 33","category":"mobile","platformType":"android"}]}]
[9:31:53 PM] [FlutterDaemon] [Info] ==> [{"id":"5","method":"emulator.launch","params":{"emulatorId":"Pixel_6_Pro_API_33","coldBoot":true}}]
[9:31:54 PM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"windows","name":"Windows","platform":"windows-x64","emulator":false,"category":"desktop","platformType":"windows","ephemeral":false,"emulatorId":null,"sdk":"Microsoft Windows [Version 10.0.22621.2070]","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":false,"fastStart":false,"flutterExit":true,"hardwareRendering":true,"startPaused":true}}}]
[9:31:54 PM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"chrome","name":"Chrome","platform":"web-javascript","emulator":false,"category":"web","platformType":"web","ephemeral":false,"emulatorId":null,"sdk":"Google Chrome 115.0.5790.170","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":false,"fastStart":false,"flutterExit":false,"hardwareRendering":true,"startPaused":true}}}]
[9:31:54 PM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"edge","name":"Edge","platform":"web-javascript","emulator":false,"category":"web","platformType":"web","ephemeral":false,"emulatorId":null,"sdk":"Microsoft Edge 115.0.1901.188","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":false,"fastStart":false,"flutterExit":false,"hardwareRendering":true,"startPaused":true}}}]
[9:31:56 PM] [FlutterDaemon] [Info] <== [{"id":"5"}]
[9:32:13 PM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"emulator-5554","name":"sdk gphone x86 64","platform":"android-x64","emulator":true,"category":"mobile","platformType":"android","ephemeral":true,"emulatorId":"Pixel_6_Pro_API_33","sdk":"Android 13 (API 33)","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":true,"fastStart":true,"flutterExit":true,"hardwareRendering":true,"startPaused":true}}}]
[9:32:13 PM] [FlutterDaemon] [Info] ==> [{"id":"6","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[9:32:13 PM] [FlutterDaemon] [Info] <== [{"id":"6","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[9:33:39 PM] [FlutterDaemon] [Info] ==> [{"id":"7","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[9:33:39 PM] [FlutterDaemon] [Info] <== [{"id":"7","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[9:33:39 PM] [FlutterDaemon] [Info] ==> [{"id":"8","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[9:33:39 PM] [FlutterDaemon] [Info] <== [{"id":"8","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[10:11:26 PM] [FlutterRun] [Error] [Dart  (Pixel 6 Pro API 33)] lib/home/primarymessage.dart:34:20: Error: Too many positional arguments: 0 allowed, but 1 found.
[10:11:26 PM] [FlutterRun] [Error] [Dart  (Pixel 6 Pro API 33)] Try removing the extra positional arguments.
    return Scaffold(jsonData == null
                   ^
/C:/src/flutter/packages/flutter/lib/src/material/scaffold.dart:1553:9: Context: Found this candidate, but the arguments don't match.
  const Scaffold({
        ^^^^^^^^
[12:00:36 AM] [FlutterRun] [Error] [Dart  (Pixel 6 Pro API 33)] lib/home/primarymessage.dart:14:3: Error: Expected an identifier, but got '@'.
[12:00:36 AM] [FlutterRun] [Error] [Dart  (Pixel 6 Pro API 33)] Try inserting an identifier before '@'.
  @override
  ^
[12:00:36 AM] [FlutterRun] [Error] [Dart  (Pixel 6 Pro API 33)] lib/home/primarymessage.dart:13:11: Error: Expected ';' after this.
[12:00:36 AM] [FlutterRun] [Error] [Dart  (Pixel 6 Pro API 33)]   var url = 
          ^
